openshift/cats/prod/backend/cats_backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cats-backend
  namespace: e38158-prod
  labels:
    app.kubernetes.io/name: cats-backend
  annotations:
    route.openshift.io/termination: "edge"
spec:
  ingressClassName: openshift-default
  rules:
    - host: nr-epd-digital-services-prod-backend.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cats-backend
                port:
                  number: 80
